--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       <script src="p5.play.js"></script>
 
       <script src="sketch.js"></script>
+      <script src="bob.js"></script>
+      <script src="roof.js"></script>
+      <script src="rope.js"></script>
+
 
     </head>
     <body>
